<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:title="@string/pref_title_location"
        android:defaultValue= "@string/pref_default_location"
        android:inputType="text"
        android:key="location"
        android:selectAllOnFocus="true"
        android:singleLine="true" />
    <ListPreference
        android:title="@string/pref_title_unit"
        android:key="@string/pref_key_unit"
        android:dialogTitle="@string/pref_title_unit"
        android:entries="@array/unitEntry"
        android:entryValues="@array/unitValues"
        android:defaultValue="@string/pref_unit_metric"/>

</PreferenceScreen>